<resources>
    <string name="app_name">PDA查验系统</string>

    <string name="l_zhanghao">账号</string>
    <string name="l_miam">密码</string>
    <string name="l_set">设  置</string>
    <string name="l_login">登  录</string>
    <string name="l_check_mode">检测模式</string>
    <string name="l_check_mode_wai">外检</string>
    <string name="title_activity_setting">系统设置</string>
    <string name="ip_activity_setting">站端IP</string>
    <string name="file_ip_activity_setting">文件站端IP</string>
    <string name="port_activity_setting">端口号</string>
    <string name="jiqima_activity_setting">机器码</string>
    <string name="shouquanma_activity_setting">授权码</string>

    <string name="shujuku_activity_setting">数据库调信息</string>
    <string name="jiane_mode_activity_setting">检测模式</string>
    <string name="zhaopianjiashuiyin_activity_setting">照片添加时间水印</string>
    <string name="moren_activity_setting">检测项目使用默认</string>
    <string name="bianma_activity_setting">上传使用编码</string>
    <string name="shijian_xianzhi_activity_setting">时间限制</string>
    <string name="moren_chepai_qianzhui_activity_setting">默认车牌前缀</string>
    <string name="cancle_activity_setting">取消</string>
    <string name="save_activity_setting">保存</string>
    <string name="fou_activity_setting">否</string>
    <string name="ce_activity_setting">测</string>
    <string name="a_activity_setting">  A  </string>
    <string name="activity_setting_ip_null">站端IP或端口不能为空</string>

    <string name="activity_geshi">输入查询的格式：1/1/1</string>
    <string name="activity_add">添加</string>
    <string name="activity_daijian_search">查询</string>
    <string name="activity_daijian_preview">预览</string>
    <string name="activity_daijian_type">类型</string>
    <string name="activity_daijian_all">全部</string>
    <string name="activity_daijian_chujian">初检</string>
    <string name="activity_daijian_fujian">复检</string>
    <string name="activity_daijian_haoma">车牌号码</string>
    <string name="activity_daijian_leixing">车辆类型</string>
    <string name="activity_daijian_cishu">检测次数</string>

    <string name="activity_daijian_car_list">待检车辆列表</string>
    <string name="activity_buhege">不合格项目</string>
    <string name="activity_daijian_car_list_refresh_toast">正在刷新数据....</string>

    <string name="ac_cardetails_chepaihaoma">车牌号码：</string>
    <string name="ac_cardetails_haopailiexing">号牌种类：</string>
    <string name="ac_cardetails_cheliangleixing">车辆类型：</string>
    <string name="ac_cardetails_vin">VIN码：</string>
    <string name="ac_cardetails_waijianchedao">外检车道：</string>
    <string name="ac_cardetails_chejianxianhao">车间线号：</string>
    <string name="ac_cardetails_shifouwaijian">是否外检：</string>
    <string name="ac_cardetails_zongzhiliang"> 总 质 量：</string>
    <string name="ac_cardetails_zhengbeizhiliang">整备质量：</string>
    <string name="ac_cardetails_chewaikuochang">车外廓长：</string>
    <string name="ac_cardetails_chewaikuokuan">车外廓宽：</string>
    <string name="ac_cardetails_chewaikuogao">车外廓高：</string>
    <string name="ac_cardetails_kaishijiance">开始检测</string>
    <string name="ac_cardetails_jianyanliushui">检验流水：</string>
    <string name="ac_cardetails_jianyancishu">检验次数：</string>
    <string name="ac_cardetails_shiyongxingzhi">使用性质：</string>
    <string name="ac_cardetails_cheshenyanse">车身颜色：</string>
    <string name="ac_cardetails_huoxiangchangdu">货箱长度：</string>
    <string name="ac_cardetails_huoxiangkuandu">货箱宽度：</string>
    <string name="ac_cardetails_huoxianggaodu">货箱高度：</string>
    <string name="ac_cardetails_zhuangtai">状态：</string>
    <string name="btn_wanchen">完成</string>
    <string name="btn_buhege">不合格项目录入</string>
    <string name="shi">是</string>
    <string name="ac_cardetails_title">车辆相关信息</string>

    <!--外检拍照-->
    <string name="ac_waijian_title">外检项目拍照</string>
    <string name="ac_waijian_paizhao_zuoqianfang_xieshi45">车辆左前方斜视45度</string>
    <string name="ac_waijian_paizhao_youhoufang_xieshi45">车辆右后方斜视45度</string>
    <string name="ac_waijian_paizhao_shibiedaima">车辆识别代码</string>
    <string name="ac_waijian_paizhao_anquandai">驾驶人座椅汽车安全带</string>
    <string name="ac_waijian_paizhao_xingshi_jilu">行驶记录装置</string>
    <string name="ac_waijian_paizhao_miehuoqi">灭火器</string>
    <string name="ac_waijian_paizhao_chexiangneibu">车厢内部</string>
    <string name="ac_waijian_paizhao_cheliang_zhenghoufang">车辆正后方</string>
    <string name="ac_waijian_paizhao_xiaochebiaopai_f_z">校车标牌(前)正面照片</string>
    <string name="ac_waijian_paizhao_xiaochebiaopai_f_f">校车标牌(前)反面照片</string>
    <string name="ac_waijian_paizhao_xiaochebiaopai_h_f">校车标牌(后)正面照片</string>
    <string name="ac_waijian_paizhao_xiaoche_biaozhideng">校车标志灯</string>
    <string name="ac_waijian_paizhao_xiaoche_tingche_zhishipai">校车停车指示标志牌</string>
    <string name="ac_waijian_paizhao_yipaizhao">已拍照</string>
    <string name="ac_waijian_paizhao_weipaizhao">未拍照</string>
    <string name="ac_waijian_paizhao">拍照</string>

    <string name="ac_waijian_paizhao_caozong_fuzhu">操纵辅助装置</string>
    <string name="ac_waijian_paizhao_fadongjihao">发动机号码</string>
    <string name="ac_waijian_paizhao_fadongjicang">发动机舱自动灭火装置</string>
    <string name="ac_waijian_paizhao_yingjichui">应急锤</string>
    <string name="ac_waijian_paizhao_jijiuxiang">急救箱</string>
    <string name="ac_waijian_paizhao_fangbaosi">防抱死制动装置</string>
    <string name="ac_waijian_paizhao_fuzhu_zhidong">辅助制动装置</string>
    <string name="ac_waijian_paizhao_jinji_qieduan">紧急切断装置</string>
    <string name="ac_waijian_paizhao_shoudong_jixie_duandian">手动机械断电开关</string>
    <string name="ac_waijian_paizhao_fuzhidong_taban">副制动踏板</string>
    <string name="ac_waijian_paizhao_weixian_huowu_yunshuche">危险货物运输车标志</string>
    <string name="ac_waijian_paizhao_luntai_guige_l_f">轮胎规格拍照(左前轮)</string>
    <string name="ac_waijian_paizhao_luntai_guige_l_b">轮胎规格拍照(左后轮)</string>
    <string name="ac_waijian_paizhao_luntai_guige_r_f">轮胎规格拍照(右前轮)</string>
    <string name="ac_waijian_paizhao_luntai_guige_r_b">轮胎规格拍照(右后轮)</string>
    <string name="ac_waijian_paizhao_chexiang_yeyabi">车厢液压臂拍照</string>

    <!--外检拍照-->
    <string name="ac_waijian_result">外检结果</string>

    <!--底盘动态-->
    <string name="ac_dipan_dongtai_jiance_time">检测时间：</string>
    <string name="ac_dipan_dongtai_chedaohao">车道号：</string>
    <string name="ac_dipan_dongtai_beizhu">备注：</string>
    <string name="ac_dipan_dongtai_shangci_daima">上次代码：</string>
    <string name="ac_dipan_dongtai_xiangmu_kaishi">项目开始</string>
    <string name="ac_dipan_dongtai_title">底盘动态检验</string>
    <!--底盘动态-->

    <string name="btn_start">开始</string>
    <string name="company_name">深邦智能科技(青岛)有限公司</string>
    <string name="hint_chepaihao">请输入车牌号</string>

    <!--外检拍照-->
    <string name="ac_verify_code_title">校验码验证</string>

    <!--路试-->
    <string name="ac_lushi_title">路试</string>
    <string name="ac_lushi_chedao">路试车道：</string>
    <string name="ac_lushi_chushudu">初速度：</string>
    <string name="ac_lushi_zongshijian">总时间：</string>
    <string name="ac_lushi_zhidong_juli">制动距离：</string>
    <string name="ac_lushi_xietiao_shijian">协调时间：</string>
    <string name="ac_lushi_mfdd">MFDD：</string>
    <string name="ac_lushi_max_jiansudu">最大减速度:</string>
    <string name="ac_lushi_zhidong_wendingxing">制动稳定性:</string>
    <string name="ac_lushi_xiangmu_kaishi">项目开始</string>
    <string name="ac_lushi_zhidong_kaishi">制动开始</string>
    <string name="ac_lushi_podao_podu">坡道坡度:</string>
    <string name="ac_lushi_chesubiao">车速实测值:</string>
    <string name="ac_lushi_zhuche_kaishi">驻车开始</string>
    <string name="ac_lushi_chesu_kaishi">车速开始</string>
    <string name="ac_lushi_xiangmu_end">项目结束</string>
    <string name="ac_lushi_hege">合格</string>
    <!--路试-->
    <string name="network_error">网络异常,请检查网络</string>
    <string name="username_pwd_null">账号或密码不能为空</string>
    <string name="quanxian_inconformity">账户权限不匹配</string>
    <string name="try_again">网络异常,请稍后重试</string>
    <string name="services_error">服务器异常,请稍后重试</string>
    <string name="username_pwd_error">用户名或密码错误</string>
    <string name="carNO_null">车牌号码不能为空</string>
    <string name="username_pwd_length">账号或密码的长度要大于5</string>


    <string name="save_path">save path : %s</string>


    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>

    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="expand_search_settings">展开搜索设置</string>
    <string name="retrieve_search_settings">收起搜索设置</string>
    <string name="connect_fail">连接失败</string>
    <string name="active_disconnected">断开了</string>
    <string name="disconnected">连接断开</string>
    <string name="please_open_blue">请先打开蓝牙</string>
    <string name="select_operation_type">选择操作类型</string>
    <string name="characteristic">特性</string>
    <string name="data_changed">的数据变化：</string>
    <string name="read">读</string>
    <string name="write">写</string>
    <string name="open_notification">打开通知</string>
    <string name="close_notification">关闭通知</string>
    <string name="service_list">服务列表</string>
    <string name="characteristic_list">特征列表</string>
    <string name="console">操作控制台</string>
    <string name="name">设备广播名：</string>
    <string name="mac">MAC:</string>
    <string name="service">服务</string>
    <string name="type">服务类型(主服务)</string>
    <string name="scan_setting">在下面你可以配置需要扫描的设备的条件，可以为空</string>
    <string name="setting_name">输入蓝牙设备广播名，多个之间以英文逗号隔开</string>
    <string name="setting_mac">输入蓝牙设备mac地址</string>
    <string name="setting_uuid">输入蓝牙设备UUID，多个之间以英文逗号隔开</string>
    <string name="input_hex">请输入HEX格式指令</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开连接</string>
    <string name="enter">进入操作</string>
</resources>
