<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/login_bg_blue"
              android:orientation="vertical">

    <!--登录-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@mipmap/guohui2"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_zhanghao"
            android:textColor="#000000"
            android:textSize="20sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/ac_login_account"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@mipmap/login_1"

            android:gravity="center_vertical"
            android:hint="@string/l_zhanghao"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_miam"
            android:textColor="#000000"
            android:textSize="20sp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/ac_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@mipmap/login_2"
            android:gravity="center_vertical"
            android:hint="@string/l_miam"
            android:inputType="textPassword"
            android:lines="1"

            android:paddingLeft="20dp"

            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/l_check_mode"
            android:textColor="@color/gray"
            android:textSize="20sp"
          />

        <TextView
            android:id="@+id/ac_login_check_mode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@mipmap/ic_arrow_drop_down_white_24dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:text="@string/l_check_mode_wai"
            android:textColor="#ffffff"
            android:textSize="20sp"
          />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/ac_login_btn_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/ac_login_view_m"
                android:layout_toStartOf="@+id/ac_login_view_m"
                android:background="@drawable/my_shape"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/l_set"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ac_login_view_m"
                android:layout_width="60dp"
                android:layout_height="1dp"
                android:layout_centerInParent="true"></TextView>


            <Button
                android:id="@+id/ac_login_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ac_login_view_m"
                android:background="@drawable/my_shape"
                android:enabled="false"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/l_login"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
