<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/set_bg"
    android:orientation="vertical">

    <!--待检测车辆-->
    <include layout="@layout/top_title"></include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/ac_daijian_et_search"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="4"
            android:background="@mipmap/et_bg_2"
            android:textColor="@color/black"
            android:textSize="@dimen/set_fot_16" />

        <Button
            android:id="@+id/ac_daijian_btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="1dp"
            android:layout_toRightOf="@+id/ac_set_view_m"
            android:layout_weight="1"
            android:background="@drawable/my_type_left"
            android:gravity="center"
            android:text="@string/activity_daijian_search"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/set_fot_15"
            android:textStyle="bold" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@mipmap/line_right_75" />

        <Button
            android:id="@+id/ac_daijian_bt_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/ac_set_view_m"
            android:layout_weight="1"
            android:background="@drawable/my_type_right"
            android:gravity="center"
            android:text="@string/activity_daijian_type"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/set_fot_15"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:text="@string/activity_daijian_haoma"
            android:textColor="@color/blue_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:text="@string/activity_daijian_leixing"
            android:textColor="@color/blue_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/activity_daijian_cishu"
            android:textColor="@color/blue_light"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <cn.lemon.view.RefreshRecyclerView
        android:id="@+id/ac_daijian_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
