<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/set_bg"
              android:orientation="vertical">

    <!--待检测车辆-->
    <include layout="@layout/top_title"></include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/ac_daijian_et_search2"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2.5"
            android:background="@mipmap/et_bg_2"
            android:hint="@string/hint_chepaihao"
            android:paddingLeft="5dp"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/set_fot_16"/>

        <Button
            android:id="@+id/ac_daijian_btn_search2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/ac_set_view_m"
            android:layout_weight="1"
            android:background="@drawable/my_shape"
            android:gravity="center"
            android:text="@string/activity_daijian_search"
            android:textColor="@color/blue_light"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:background="@mipmap/line_right_75"/>

        <Button
            android:id="@+id/ac_daijian_bt_type2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:visibility="gone"
            android:layout_toRightOf="@+id/ac_set_view_m"
            android:layout_weight="1.4"
            android:background="@drawable/my_shape"
            android:gravity="center"
            android:text="复检拍照"
            android:textColor="@color/blue_light"
            android:textSize="14sp"
            android:textStyle="bold"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:text="@string/activity_daijian_haoma"
            android:textColor="@color/blue_light"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:maxLines="1"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:text="@string/activity_daijian_leixing"
            android:textColor="@color/blue_light"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/activity_daijian_cishu"
            android:textColor="@color/blue_light"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/list_shequgonggao_baoxiu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

        <!--  <android.support.design.widget.FloatingActionButton
              android:id="@+id/fab"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="bottom|right"
              android:layout_margin="16dp"
              android:backgroundTint="@color/blue"
              android:src="@mipmap/fresh"/>
  -->

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:src="@mipmap/fresh"
            app:backgroundTint="@color/blue"

            />
    </FrameLayout>

</LinearLayout>
