<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:descendantFocusability="blocksDescendants"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/item_ac_waijian_tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text=""
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/ac_cardetails_font_size"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/item_ac_waijian_txt_luntai_guige_r_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/ac_waijian_paizhao_weipaizhao"
                android:textColor="@color/red"
                android:textSize="@dimen/ac_waijian_font_size_22"/>

            <Button
                android:id="@+id/item_ac_waijian_btn_luntai_guige_r_b_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="25dp"
                android:layout_toLeftOf="@+id/item_ac_waijian_btn_luntai_guige_r_b"
                android:background="@drawable/waijian_btn_bg"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/activity_daijian_preview"
                android:textColor="@color/black"
                android:textSize="@dimen/ac_waijian_font_size_20"/>

            <Button
                android:id="@+id/item_ac_waijian_btn_luntai_guige_r_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/waijian_btn_bg"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/ac_waijian_paizhao"
                android:textColor="@color/black"
                android:textSize="@dimen/ac_waijian_font_size_20"

                />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_1"/>
    </LinearLayout>

</LinearLayout>
